// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOrganizationGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:360021738231",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 360021738231,
            "name": "Support",
            "updated_at": "2021-10-10T20:49:30Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "360021738231",
      "name": "Support",
      "updatedAt": "2021-10-10T20:49:30Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:361584776731",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "details": "",
            "domain_names": Array [],
            "external_id": null,
            "group_id": 360021738231,
            "id": 361584776731,
            "name": "JupiterOne",
            "notes": "",
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2021-11-05T16:50:42Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "JupiterOne",
      "domainNames": Array [],
      "groupId": "360021738231",
      "id": "361584776731",
      "name": "JupiterOne",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2021-11-05T16:50:42Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_organization:361584776731",
      "_key": "zendesk_organization:361584776731|has|zendesk_group:360021738231",
      "_toEntityKey": "zendesk_group:360021738231",
      "_type": "zendesk_organization_has_group",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_group",
    "zendesk_organization",
    "zendesk_organization_has_group",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchOrganizations should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_account:420755677092",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "authenticity_token": "FO5plA91Rq2YDtb/kOmFpzJx4e4ybP8C8PORIBmzCLDSuqGRllQvqPJbSotPbQxop6Reo7XNHlQKbttSQ+PjVw==",
            "created_at": "2021-10-10T20:49:22Z",
            "custom_role_id": null,
            "default_group_id": 360021738231,
            "details": null,
            "email": "development@jupiterone.dev",
            "external_id": null,
            "iana_time_zone": "America/New_York",
            "id": 420755677092,
            "last_login_at": "2021-11-16T15:27:19Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Austin Kelleher",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 361584776731,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "America/New_York",
            "two_factor_auth_enabled": null,
            "updated_at": "2021-11-16T15:27:19Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420755677092.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_account",
      "active": true,
      "createdOn": undefined,
      "displayName": "Austin Kelleher",
      "email": "development@jupiterone.dev",
      "id": "420755677092",
      "name": "Austin Kelleher",
      "username": "development@jupiterone.dev",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:361584776731",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "details": "",
            "domain_names": Array [],
            "external_id": null,
            "group_id": 360021738231,
            "id": 361584776731,
            "name": "JupiterOne",
            "notes": "",
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2021-11-05T16:50:42Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "JupiterOne",
      "domainNames": Array [],
      "groupId": "360021738231",
      "id": "361584776731",
      "name": "JupiterOne",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2021-11-05T16:50:42Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_account:420755677092",
      "_key": "zendesk_account:420755677092|has|zendesk_organization:361584776731",
      "_toEntityKey": "zendesk_organization:361584776731",
      "_type": "zendesk_account_has_organization",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_account",
    "zendesk_organization",
    "zendesk_account_has_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
